--- a/simple-rocket-app/src/app/app.component.html
+++ b/simple-rocket-app/src/app/app.component.html
@@ -1,4 +1,9 @@
-<h1>{{title}}</h1>
+
+  <div class='header'>
+    <h1>Welcome to Simple Rocket App</h1>
+    <h2>Please enter your information below</h2>
+  </div>
+<!-- <h1>{{title}}</h1> -->
 <nav>
     <a routerLink="/">Home</a> |
     <a routerLink="/products">Products</a>
