--- a/simple-rocket-app/src/app/rocket-info-form/rocket-info-form.component.css
+++ b/simple-rocket-app/src/app/rocket-info-form/rocket-info-form.component.css
@@ -15,6 +15,9 @@
 
     width: 100%;
     height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0px 5px 0px 5px;
 }
 
 .is-invalid {
